--- a/data-analyst.html
+++ b/data-analyst.html
@@ -71,6 +71,12 @@
   
 	
 <!--Begin body here --> 
+<h5><a href='https://doxo.recruiterbox.com/jobs/fk01nzn/'>
+    Data Analyst - SEM at doxo
+</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oDwkbfwo&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=n9YImMws'>Freedom Financial Network Careers - Sr. Data Analyst (3 Positions Available)</a></h5> 
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-28</p>
@@ -295,7 +301,7 @@ organization?...</p>
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/daveramsey/job/o9tobfwV'>Ramsey Solutions Careers - Data Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/daveramsey/job/o9tobfwV'>Ramsey Solutions Careers - Data Analyst</a></h5> 
 <p><span class="badge badge-light">Tennessee</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -309,7 +315,7 @@ organization?...</p>
 <p><span class="badge badge-light">Philadelphia, Pennsylvania</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='http://thebizzellgroup.applytojob.com/apply/56qtNULS51/Data-Research-Analyst'>Data Research Analyst - The Bizzell Group - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://thebizzellgroup.applytojob.com/apply/56qtNULS51/Data-Research-Analyst'>Data Research Analyst - The Bizzell Group - Career Page</a></h5> 
 <p><span class="badge badge-light">Lanham, MD</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -332,7 +338,7 @@ Data Analyst. City, Dayton. State, OH. Description. Role and Responsibility:.</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oa68afwi&__jvst=Employee+Referral&__jvsd=sODmngwV&__jvsc=Twitter&bid=ncCilMwI&jvi=oa68afwi,Job&jvk=Job'>Medidata Solutions Careers - Associate Analyst, Commercial Business</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oa68afwi&__jvst=Employee+Referral&__jvsd=sODmngwV&__jvsc=Twitter&bid=ncCilMwI&jvi=oa68afwi,Job&jvk=Job'>Medidata Solutions Careers - Associate Analyst, Commercial Business</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
@@ -348,7 +354,7 @@ Data Analyst. City, Dayton. State, OH. Description. Role and Responsibility:.</p
 <p><span class="badge badge-light">Scottsdale, Arizona</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/addepar1/jobs/4492521002'>Job Application for Data Operations Analyst at Addepar</a></h5> 
+<h5><a href='https://boards.greenhouse.io/addepar1/jobs/4492521002'>Job Application for Data Operations Analyst at Addepar</a></h5> 
 <p><span class="badge badge-light">Salt Lake City, UT</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -406,7 +412,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">Santa Monica, California</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://deseretmanagement.wd1.myworkdayjobs.com/en-US/Boncom/job/SLC-Triad-Center/Data-Analyst_R2257'>Data Analyst</a></h5> 
+<h5><a href='https://deseretmanagement.wd1.myworkdayjobs.com/en-US/Boncom/job/SLC-Triad-Center/Data-Analyst_R2257'>Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 12, 2019 ... Data Analyst needed to join Boncom. Boncom is an advertising and 
 communications agency. We develop innovative and strategic campaigns both 
@@ -423,12 +429,12 @@ Zayo by providing various analyses relating to Zayo's network and geographical
 <p>il y a 4?jours ... Rejoignez la belle brochette de LaFourchette ! Derri?re LaFourchette, il y a une 
 ?quipe aux personnalit?s et aux talents multiples. Du commercial au geek,?...</p>
 <hr/>
-<h5><a href='https://mainebhr.recruiterbox.com/jobs/fk03dnv?apply=true'>Senior Project Manager and Data Analyst at State of Maine</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mainebhr.recruiterbox.com/jobs/fk03dnv?apply=true'>Senior Project Manager and Data Analyst at State of Maine</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 17, 2019 ... Senior Project Manager and Data Analyst. Augusta, Maine, United States Full-
 time. Application closes: Oct 29, 2019. loading Fetching your Linkedin profile .</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/0D7926AC22'>Data Analyst - Human Domain Solutions, LLC (HDS)</a></h5> 
+<h5><a href='https://www.workable.com/j/0D7926AC22'>Data Analyst - Human Domain Solutions, LLC (HDS)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 10, 2019 ... Human Domain Solutions,LLC is seeking a candidate to fill the role of Data 
 Analyst at The Office of Inspector General (OIG), Office of Audits (AUD), Audit?...</p>
@@ -438,13 +444,13 @@ Analyst at The Office of Inspector General (OIG), Office of Audits (AUD), Audit?
 <p>Oct 16, 2019 ... The DC Operations Analyst is responsible for the management and operation of 
 the storage, virtual data centre infrastructures, infrastructure and application?...</p>
 <hr/>
-<h5><a href='https://apply.workable.com/tiki-corporation/j/47DBC06E7A/'>Customer Analytics - Data Analyst - Tiki Corporation</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/tiki-corporation/j/47DBC06E7A/'>Customer Analytics - Data Analyst - Tiki Corporation</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 18, 2019 ... These questions are just some of the thoughts you'll be helping us explore as 
 Strategic Data Scientist / Chief Customer Analyst. This role reports directly to our
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/santander-consumer-usa/job/oudpbfw1'>Santander Consumer USA Careers - Compliance Data Analyst III</a></h5> 
+<h5><a href='http://jobs.jobvite.com/santander-consumer-usa/job/oudpbfw1'>Santander Consumer USA Careers - Compliance Data Analyst III</a></h5> 
 <p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -464,7 +470,7 @@ Strategic Data Scientist / Chief Customer Analyst. This role reports directly to
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dashlane/jobs/1927392'>Job Application for Data Analyst at Dashlane</a></h5> 
+<h5><a href='https://boards.greenhouse.io/dashlane/jobs/1927392'>Job Application for Data Analyst at Dashlane</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -488,7 +494,7 @@ Strategic Data Scientist / Chief Customer Analyst. This role reports directly to
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://ajg.referrals.selectminds.com/jobs/data-analyst-20083'>Data Analyst - Gallagher Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ajg.referrals.selectminds.com/jobs/data-analyst-20083'>Data Analyst - Gallagher Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -504,12 +510,8 @@ Strategic Data Scientist / Chief Customer Analyst. This role reports directly to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698105147-data-analyst'>Ubisoft Data Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698105147-data-analyst'>Ubisoft Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Chengdu, Sichuan</span></p>
-<p>Posted on: 2019-10-24</p>
-<hr/>
-<h5><a href='https://geico.referrals.selectminds.com/jobs/security-data-analyst-10744'>Security Data Analyst - GEICO Careers</a></h5> 
-<p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
 
